--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,21 +69,21 @@ jobs:
 
       # Build and release if it's the main repository
       - name: Build and release on Mac
-        if: startsWith(matrix.os, 'macOS') && github.repository == 'th-ch/youtube-music'
+        if: startsWith(matrix.os, 'macOS') && github.repository != 'th-ch/youtube-music'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           yarn run release:mac
 
       - name: Build and release on Linux
-        if: startsWith(matrix.os, 'ubuntu') && github.repository == 'th-ch/youtube-music'
+        if: startsWith(matrix.os, 'ubuntu') && github.repository != 'th-ch/youtube-music'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           yarn run release:linux
 
       - name: Build and release on Windows
-        if: startsWith(matrix.os, 'windows') && github.repository == 'th-ch/youtube-music'
+        if: startsWith(matrix.os, 'windows') && github.repository != 'th-ch/youtube-music'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
